--- a/static/styles/custom.css
+++ b/static/styles/custom.css
@@ -1,4 +1,4 @@
-@import url(//fonts.googleapis.com/css?family=Roboto+Slab:300,700);
+@import url(http://fonts.googleapis.com/css?family=Roboto+Slab:300,700);
 @import url(alte_haas_grotesk_bold/alte_haas_grotesk_bold.css);
 /*@import url(//fonts.googleapis.com/css?family=Arvo:400,700,400italic,700italic);*/
 
